# MultiAgentOracle

./: .env.example  .gitignore  COMMITMENT_REVEAL_SUMMARY.md  Cargo.toml  DIAP_INTEGRATION.md  README.md  REAL_API_TESTING_GUIDE.md  REFACTOR_TODO.md  comparison_figures.tex  experiment_output.txt  figures.tex  individual_figures.tex  latex_comparison_figures.tex  migration_plan.md  run_deepseek_experiment.bat  run_experiment_now.bat  run_minimax_experiment.bat  split_multi_agent_comparison.py  test_3_rounds.bat  test_compile.ps1  two_figures.tex  verify_fix.ps1  visualize_ablation.py  visualize_comparison.py  visualize_multi_agent_comparison.py  visualize_overall_pipeline.py  visualize_pipeline_final.py  visualize_pipeline_v2.py  visualize_pipeline_v3.py  visualize_pipeline_v4.py
.opencode/plans/: sdk-refactor.md
DIAP-Rust-SDK/: .cargoignore  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package.json  zkp_proving.key  zkp_verifying.key
DIAP-Rust-SDK/mcp_server/: .dockerignore  Cargo.toml  Dockerfile  README.md  pyproject.toml
DIAP-Rust-SDK/mcp_server/python/diap_mcp_server/: __init__.py  server.py
DIAP-Rust-SDK/mcp_server/src/: lib.rs  main.rs
DIAP-Rust-SDK/noir_circuits/: Nargo.toml  Prover.toml
DIAP-Rust-SDK/noir_circuits/src/: main.nr
DIAP-Rust-SDK/src/: agent_auth.rs  agent_verification.rs  config_manager.rs  did_builder.rs  did_cache.rs  encrypted_iroh_id.rs  encrypted_peer_id.rs  identity_manager.rs  ipfs_bidirectional_verification.rs  ipfs_client.rs  ipfs_node_manager.rs  iroh_api_research.rs  iroh_communicator.rs  iroh_node.rs  key_generator.rs  key_manager.rs  kubo_installer.rs  lib.rs  libp2p_identity.rs  libp2p_node.rs  noir_embedded.rs  noir_universal.rs  noir_verifier.rs  noir_zkp.rs  nonce_manager.rs  pubsub_authenticator.rs
DIAP-Rust-SDK/src/benchmarks/: collector.rs  measurements.rs  mod.rs  reporter.rs  runner.rs  types.rs
MultiAgentOracle/: Cargo.toml  README.md
MultiAgentOracle/examples/: simple_demo.rs  solana_demo.rs
MultiAgentOracle/scripts/: run_local_test.ps1
MultiAgentOracle/solana-oracle/: Anchor.toml  DEPLOYMENT_SUMMARY.md  INSTALLATION_PATHS.md  LOCAL_TESTNET_GUIDE.md  VERIFICATION_REPORT.md  build.ps1  deploy_devnet_guide.md  deploy_to_devnet_actual.ps1  environment_check_report.md  fix_environment.ps1  mock_solana_api.js  mock_test_report.md  mock_test_system.ps1  quick_start.ps1  set_solana_env.ps1  simple_deploy.ps1  simple_mock_test.js  step_by_step_check.ps1  test-wallet.json  test_agent.js  test_client.rs  test_existing.js  test_program.rs  test_simple.js  windows_deploy.ps1  wsl_minimal_setup.sh  wsl_quick_test.sh  wsl_setup.sh  wsl_test_report.md
MultiAgentOracle/src/: lib.rs
circuits/: causal_fingerprint.circom  causal_fingerprint.toml  compile_nori.sh
config/: local_test.toml
contracts/: README.md  hardhat.config.js  package.json
contracts/contracts/: IdentityRegistry.sol  IncentiveSystem.sol  ReputationStorage.sol
docs/: COMMITMENT_REVEAL_GUIDE.md  Causal Fingerprinting.md  Cluster Center.md  IMPLEMENTATION_SUMMARY.md  OVERALL_PIPELINE.md  PROJECT_STRUCTURE.md  PUSH_RECORD_20240112.md  Spectral Analysis.md  ZK_ARCHITECTURE.md  ZK_IMPLEMENTATION_SUMMARY.md  advanture.md  attack.md  cuasel.md  meet errors.md  safety.md  safety2md  structure.md  value.md  what is it.md  whole fing.md
examples/: DEEPSEEK_API_GUIDE.md  OPTIMIZATION_SUMMARY.md  TESTING_GUIDE.md  ablation_study.rs  blockchain_consensus_demo.rs  complete_true_blockchain.rs  diap_demo.rs  integration_test.rs  oracle_agent_demo.rs  paper_benchmark_experiment.rs  quick_test.bat  quick_test.sh  real_api_causal_demo.rs  real_api_test.rs  real_benchmark_experiment.rs  real_benchmark_experiment_10_agents.rs  real_blockchain_consensus_demo.rs  real_devnet_blockchain.rs  sdk_quick_start.rs  secure_commitment_reveal.rs  setup_api_keys.bat  setup_deepseek_api.bat  simple_causal_demo.rs  simple_demo.rs  simple_real_blockchain_demo.rs  simulated_validator_blockchain.rs  solana_demo.rs  standalone_causal_demo.rs  test_json_parse.rs  test_minimax_api.rs  test_minimax_json.rs  test_zkp_setup.rs  true_blockchain_status.rs  validate_configs.bat  zk_fingerprint_experiment.rs
examples/configs/: test_aggressive.json  test_conservative.json  test_default.json  test_mixed.json
examples/tests/: hierarchical_network_test.rs
experiments/: FINAL_SUMMARY.md  REAL_EXPERIMENT_SUMMARY.md  analyze_combined_results.py  run_paper_experiment.bat
solana-oracle/: Anchor.toml  cli_client.rs  deploy_to_devnet.ps1  multi_agent_config.yaml  setup_env.sh  start_local_testnet.ps1  test-wallet.json  test_client.rs  testnet-deployer.json
solana-oracle/scripts/: deploy_wsl.sh  deploy_wsl_simple.sh  start_validator_simple.sh  step_by_step_deploy.sh  verify_deployment.sh
src/: blockchain.rs  lib.rs  types.rs
src/causal_graph/: ai_reasoning.rs  builder.rs  judgment.rs  mod.rs  selection.rs  types.rs  utils.rs  visualization.rs
src/consensus/: aggregation.rs  algorithms.rs  causal_fingerprint.rs  commitment_reveal.rs  consensus_engine.rs  consensus_result.rs  malicious_defense.rs  mod.rs  spectral_analysis.rs  validation.rs  voting.rs
src/diap/: config.rs  identity_manager.rs  mod.rs  network_adapter.rs
src/diap.bak/: config.rs  identity_manager.rs  network_adapter.rs
src/network/: message_handler.rs  mod.rs  network_manager.rs  peer_discovery.rs  protocol.rs  routing.rs  security.rs  transport.rs
src/oracle_agent/: agent.rs  config.rs  data_collection.rs  data_types.rs  http_client.rs  llm_client.rs  mod.rs  validation.rs
src/reputation/: algorithms.rs  mod.rs  reputation_manager.rs  reputation_metrics.rs  reputation_score.rs  storage.rs
src/sdk/: builder.rs  mod.rs  oracle.rs  solana.rs  types.rs
src/solana/: consensus_deployer.rs  mod.rs  real_consensus_deployer.rs  real_devnet_deployer.rs  rpc_client.rs  simple_solana_deployer.rs  true_solana_deployer.rs  types.rs
src/test/: config.rs  local_node_manager.rs  mod.rs  preconfigured_reputation.rs  visualization.rs  (+1 more)
tests/: diap_integration_test.rs  gateway_access_test.rs  hierarchical_consensus_test.rs
(+145 files in other folders)
