[package]
name = "multi-agent-oracle"
version = "0.1.0"
edition = "2021"
description = "基于DIAP身份的多智能体预言机系统"
authors = ["liuyuanjie <2844169590@qq.com>"]
license = "MIT"
repository = "https://github.com/yourusername/multi-agent-oracle"
readme = "README.md"

# 更多元数据
keywords = ["oracle", "blockchain", "decentralized", "diap", "multi-agent"]
categories = ["cryptography", "blockchain", "network-programming"]

[features]
default = ["p2p", "blockchain"]
p2p = ["libp2p", "iroh"]
blockchain = ["ethers", "solana-client"]

[dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"

# DIAP身份系统
diap-rs-sdk = { path = "../DIAP-Rust-SDK", version = "0.2.11", features = ["default"] }

# 网络和P2P
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux"], optional = true }
iroh = { version = "0.93.2", optional = true }
reqwest = { version = "0.11", features = ["json"], optional = true }

# 区块链交互
ethers = { version = "2.0", features = ["rustls"], optional = true }
solana-client = { version = "1.17", optional = true }

# 密码学
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"

# 命令行解析
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "oracle-agent"
path = "src/bin/oracle_agent.rs"

[[bin]]
name = "consensus-node"
path = "src/bin/consensus_node.rs"

[[bin]]
name = "reputation-manager"
path = "src/bin/reputation_manager.rs"

[[example]]
name = "oracle_agent_demo"
path = "examples/oracle_agent_demo.rs"

[[example]]
name = "consensus_demo"
path = "examples/consensus_demo.rs"

[[example]]
name = "reputation_demo"
path = "examples/reputation_demo.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
