[package]
name = "multi-agent-oracle"
version = "0.1.0"
edition = "2021"
# description = "基于DIAP身份的多智能体预言机系统"
authors = ["liuyuanjie <2844169590@qq.com>"]
license = "MIT"
repository = "https://github.com/logos-42/multi-agent-oracle"
readme = "README.md"

# 更多元数据
# keywords = ["oracle", "blockchain", "decentralized", "diap", "multi-agent"]
categories = ["cryptography", "blockchain", "network-programming"]

[features]
default = ["p2p", "bs58", "hex", "web-server"]
p2p = ["libp2p", "iroh"]
solana = ["bs58", "hex"]  # 轻量级Solana支持
ethereum = ["ethers"]
web-server = ["axum", "tower-http"]  # Web服务器支持
bs58 = ["dep:bs58"]
hex = ["dep:hex"]

[dependencies]
# 核心依赖
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
toml = "0.8"
dotenv = "0.15"

# 网络和P2P
libp2p = { version = "0.53", features = ["tcp", "dns", "noise", "yamux"], optional = true }
iroh = { version = "0.93.2", optional = true }
reqwest = { version = "0.11", features = ["json"] }

# 区块链交互 - 轻量级Solana支持 (通过HTTP RPC)
bs58 = { version = "0.5", optional = true }
hex = { version = "0.4", optional = true }

# 区块链交互 - 以太坊（可选）
ethers = { version = "2.0", features = ["rustls"], optional = true }

# 密码学
ring = "0.17"
aes-gcm = "0.10"
sha2 = "0.10"
md5 = "0.7"
ed25519-dalek = "2.0"

# 工具库
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
lazy_static = "1.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"

# 命令行解析
clap = { version = "4.0", features = ["derive"] }

# Web框架（用于DIAP模拟服务器）
axum = { version = "0.7", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

# 消息编码
rmp-serde = "1.1"
bincode = "1.3"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"

[[bin]]
name = "oracle-agent"
path = "src/bin/oracle_agent.rs"

[[bin]]
name = "test_console"
path = "src/bin/test_console.rs"

# [[bin]]
# name = "diap_mock_server"
# path = "src/bin/diap_mock_server.rs"

[[example]]
name = "oracle_agent_demo"
path = "examples/oracle_agent_demo.rs"

[[example]]
name = "consensus_demo"
path = "examples/consensus_demo.rs"

[[example]]
name = "reputation_demo"
path = "examples/reputation_demo.rs"

[[example]]
name = "solana_demo"
path = "examples/solana_demo.rs"

[[example]]
name = "secure_commitment_reveal"
path = "examples/secure_commitment_reveal.rs"

[[example]]
name = "zk_fingerprint_experiment"
path = "examples/zk_fingerprint_experiment.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'
